--- a/more.html
+++ b/more.html
@@ -81,7 +81,7 @@
                         </div>
                     </section>
                     <section class="team">
-                        <div class="title">title: REFERENCE</div>
+                        <div class="title">title: REFERENCES</div>
                         <div class="content">
                             <ul class="re-list">
                                 <li class="re-list-item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0s">
