--- a/swot.html
+++ b/swot.html
@@ -75,19 +75,15 @@
                                 <ul>
                                     <li>
                                         <span>1.</span>
-                                        With sufficient funds for global
-                                        promotion
+                                        Cooperation
                                     </li>
                                     <li>
                                         <span>2.</span>
-                                        The team is full of energy and
-                                        creativity
+                                        Creativity
                                     </li>
                                     <li>
                                         <span>3.</span>
-                                        The team's efforts have added
-                                        continuity and special effects to the
-                                        viewing
+                                        Power using
                                     </li>
                                 </ul>
                             </div>
@@ -96,18 +92,15 @@
                                 <ul>
                                     <li>
                                         <span>1.</span>
-                                        The team needs fresh blood or it
-                                        brings aesthetic fatigue
+                                        Decision making problems
                                     </li>
                                     <li>
                                         <span>2.</span>
-                                        The team's technological
-                                        innovation and leadership innovation is insufficien
+                                        Civic leadership problems
                                     </li>
                                     <li>
                                         <span>3.</span>
-                                        The Promotion problems about
-                                        Decentralized Copyright
+                                        Lack of trust
                                     </li>
                                 </ul>
                             </div>
@@ -118,17 +111,15 @@
                                 <ul>
                                     <li>
                                         <span>1.</span>
-                                        the leader Kevin Fitch's Vision
+                                        Transformation of the leadership
                                     </li>
                                     <li>
                                         <span>2.</span>
-                                        The good times of superheroes
-                                        have many followers
+                                        Take advantages of flowers
                                     </li>
                                     <li>
                                         <span>3.</span>
-                                        Use of Extension Coverage to
-                                        Increase Fame
+                                        Set clear goals or smart goals
                                     </li>
                                 </ul>
                             </div>
@@ -137,18 +128,15 @@
                                 <ul>
                                     <li>
                                         <span>1.</span>
-                                        Management Team of
-                                        Competitor DC company
+                                        Valuing Diversity
                                     </li>
                                     <li>
                                         <span>2.</span>
-                                        Disadvantages of design of
-                                        superheros
+                                        Conflict solving
                                     </li>
                                     <li>
                                         <span>3.</span>
-                                        Leading a team will lead to
-                                        differences of opinion and conflicts
+                                        Interdependence
                                     </li>
                                 </ul>
                             </div>
