--- a/weekness.html
+++ b/weekness.html
@@ -10,14 +10,15 @@
     <link rel="stylesheet" href="./lib/swiper-4.4.2/css/swiper.min.css">
     <style>
         .swiper-container {
-            min-height: 800px;
+            width: 800px;
+            min-height: 500px;
             background-color: #f2f2f2bd;
             color: #fff;
         }
 
         .swiper-slide {
             /*  */
-            min-height: 800px;
+            min-height: 500px;
         }
 
         .blue-slide {
@@ -89,21 +90,7 @@
                                 </h1>
                                 <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
                                     swiper-animate-delay="0.6s">
-                                    The team needs fresh blood or it
-                                    brings aesthetic fatigue
-                                </p>
-                                <h1 class="t1 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
-                                    swiper-animate-delay="0.9s">
-                                    Need One
-                                </h1>
-                                <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
-                                    swiper-animate-delay="1.2s">
-                                    In the promotion team, the promotion mode needs to be changeable and
-                                    cannot be single. For Marvel, the promotion cannot be static. For example,
-                                    some superhero movies will have many parts. The first content cannot be
-                                    repeated during the promotion of the second movie. Only by highlighting
-                                    the technological update and progress of the highlight of this step can the
-                                    audience be guaranteed not to suffer aesthetic fatigue.
+                                    Decision making problems
                                 </p>
                                 <h1 class="t1 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
                                     swiper-animate-delay="1.5s">
@@ -111,25 +98,9 @@
                                 </h1>
                                 <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
                                     swiper-animate-delay="1.8s">
-                                    Firstly, Leadership is widely used in promotion. A good leader directly
-                                    determines the income of this team (Bill, 2004, p.1).
-                                </p>
-                                <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
-                                    swiper-animate-delay="2.1s">
-                                    Secondly, The purpose of the brand needs to be deeply rooted in the
-                                    hearts of the people in order to occupy a favorable position in the minds
-                                    of consumers (Lappe, 2015, p.1).
-                                </p>
-                                <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
-                                    swiper-animate-delay="2.5s">
-                                    Thirdly, Marvel Comics has a very important factor that can add fresh
-                                    blood to the team to avoid aesthetic fatigue: control over the characters.
-                                </p>
-                                <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
-                                    swiper-animate-delay="2.8s">
-                                    Finally, after the promotion’s team effort, from 2008 to 2017, Marvel's
-                                    movie universe has reached the third stage, with a total of 15 superhero
-                                    movies showing.
+                                    1.For the decision making problems, Marvel need some fresh blood which means to
+                                    hire more employees to have more creativity. Otherwise people will get aesthetic
+                                    fatigue.
                                 </p>
                             </div>
                             <div class="swiper-slide orange-slide">
@@ -138,23 +109,7 @@
                                     weekness
                                 </h1>
                                 <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
-                                    swiper-animate-delay="0.6s">The team's technological
-                                    innovation and leadership
-                                    innovation is insufficient
-                                </p>
-                                <h1 class="t1 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
-                                    swiper-animate-delay="0.9s">
-                                    Need Two
-                                </h1>
-                                <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
-                                    swiper-animate-delay="1.2s">
-                                    Technological innovation and leadership innovation includes many
-                                    aspects. The most important technological innovation should be film
-                                    shooting skills and special effects. Secondly, technological innovation is
-                                    also needed in the team. Marvel is a dynamic company, but in some
-                                    aspects it still adheres to the most primitive model, such as promotion and
-                                    distribution and publishing, the company can let leaders take more
-                                    players' opinions in the promotion team.
+                                    swiper-animate-delay="0.6s">Creativity
                                 </p>
                                 <h1 class="t1 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
                                     swiper-animate-delay="1.5s">
@@ -162,35 +117,9 @@
                                 </h1>
                                 <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
                                     swiper-animate-delay="1.8s">
-                                    Firstly, Major terminal brand giants are developing AR
-                                    products, so does
-                                    marvel. This is an innovation in film, not related to leadership, but the
-                                    innovation related to leadership is the innovation of the promotion
-                                    program team.
-                                </p>
-                                <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
-                                    swiper-animate-delay="2.1s">Firstly, Major terminal brand giants are developing AR
-                                    products, so does
-                                    marvel. This is an innovation in film, not related to leadership, but the
-                                    innovation related to leadership is the innovation of the promotion
-                                    program team.
-                                </p>
-                                <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
-                                    swiper-animate-delay="2.4s">
-                                    Secondly, leadership is becoming more and more comprehensive with the
-                                    progress and the times pasted (Yukl, 1989, p.1). In team innovation,
-                                    leaders learn to give us directions, such as team conflicts and building
-                                    influential teams. For the conflicts that the team have to faced, A group of
-                                    people from all over the world never realized that forming a team,
-                                    starting to work together, working together and completing the team's
-                                    tasks together requires running-in and coordination.
-                                </p>
-                                <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
-                                    swiper-animate-delay="2.7s">
-                                    Finally, once the conflict solved, build a effectively team are very
-                                    essential for the career of Marvel. The combat effectiveness of a team is
-                                    determined not only by the most capable people in the team, but also by
-                                    the correctness of the strategy and the team's execution.
+                                    For the Improvement and revolutions, it is a test to the leader, the stuff need
+                                    to break the rules to bring forward opinions, then the leader can crate changes,
+                                    make the company better.
                                 </p>
                             </div>
                             <div class="swiper-slide blue-slide">
@@ -200,20 +129,7 @@
                                 </h1>
                                 <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
                                     swiper-animate-delay="0.6s">
-                                    The Promotion problems about
-                                    Decentralized Copyright
-                                </p>
-                                <h1 class="t1 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
-                                    swiper-animate-delay="0.9s">
-                                    Need Three
-                                </h1>
-                                <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
-                                    swiper-animate-delay="1.2s">
-                                    The problems of the promotion team and the decentralization of copyright
-                                    will influence each other. For Marvel, Since DC was acquired by Warner
-                                    as early as 69 years ago, DC is very strong in distribution channels and so
-                                    on. At that time, the U.S. cartoon market shrank, and Marvel's original
-                                    distribution channel was particularly limited.
+                                    Lack of trust
                                 </p>
                                 <h1 class="t1 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
                                     swiper-animate-delay="1.5s">
@@ -221,12 +137,13 @@
                                 </h1>
                                 <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
                                     swiper-animate-delay="1.8s">
-                                    Copyright issue are complicate and hard to solve it, the best way to solve
-                                    this is teamwork with other companies, this teamwork is not about
-                                    internal of the company, it is a external teamwork Strategy with other
-                                    companies. It is considered as cooperation. Marvel should cooperate with
-                                    other companies and publish some joint works to reduce the impact of
-                                    copyright decentralization.
+                                    Trust problems, it is hard to build trust between people, doesn't matter for the
+                                    internal or external of Marvel. it will reduce the company impact and cause
+                                    Decentralized copyright problems.
+                                    Overall, although Marvel have some parts of leadership problems need to improve,
+                                    but Marvel still have their own advantages and i still believe they have many
+                                    High-performance groups doesn't matter inside the company or in their movies they
+                                    created. It is a sample company that we can learn a lot from it.
                                 </p>
                             </div>
                         </div>
