--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             </div>
                         </div>
                         <div class="more">
-                            <a href="javascript:;">more</a>
+                            <!-- <a href="javascript:;">more</a> -->
                         </div>
                     </section>
                     <section class="gallery">
@@ -243,7 +243,7 @@
                             </div>
                         </div>
                         <div class="more">
-                            <a href="javascript:;">more</a>
+                            <!-- <a href="javascript:;">more</a> -->
                         </div>
                     </section>
                     <section class="team">
@@ -266,7 +266,7 @@
                             </ul>
                         </div>
                         <div class="more">
-                            <a href="javascript:;">more</a>
+                            <!-- <a href="javascript:;">more</a> -->
                         </div>
                     </section>
                 </main>
